--- a/logolays/package.json
+++ b/logolays/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.17.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
     "three": "^0.169.0"
   },
   "devDependencies": {
